force-app/main/default/objects/HP_LOG_WS__c/HP_LOG_WS__c.object-meta.xml
<CustomObject>
    <label>HP LOG WS</label>
    <nameField>
        <displayFormat>LOGWS-{000000}</displayFormat>
        <label>HP LOG WS Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>HP LOG WS</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>