force-app/main/default/objects/HP_LOG_WS__c/fields/Body_Response__c.field-meta.xml
<CustomField>
    <fullName>Body_Response__c</fullName>
    <label>Body_Response</label>
    <length>50000</length>
    <type>LongTextArea</type>
</CustomField>