force-app/main/default/objects/HP_LOG_WS__c/fields/Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Endpoint__c</fullName>
    <label>Endpoint</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>