force-app/main/default/objects/HP_LOG_WS__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>